astore: Rename astore/rpc/astore to astore/proto
This is part of a larger effort to make the repo `go get -u
./...`-clean. `go get` doesn't like the fact that the library which is
imported via `.../astore/rpc/astore` actually resides in
`...astore/rpc`.

This change:
* renames the `rpc` dir to `proto`, to line up with conventions
  established by other golang+bazel repositories
* drops the `/astore` suffix on the import path, so that the package is
  imported via `.../astore/proto`
* aliases the imported package as `apb` everywhere; this is convention
  for imports of proto-generated code, which signals to readers that the
  types are protobuf types and not ordinary code
* splits stdlib imports, enkit imports, and third-party imports in every
  touched file

Tested: `bazel test //...` passes

--- a/astore/BUILD.bazel
+++ b/astore/BUILD.bazel
@@ -19,7 +19,7 @@ go_test(
     deps = [
         "//astore/atesting:go_default_library",
         "//astore/client/astore:go_default_library",
-        "//astore/rpc:astore-go",
+        "//astore/proto:astore-go",
         "//astore/server/astore:go_default_library",
         "//lib/client/ccontext:go_default_library",
         "//lib/logger:go_default_library",
