--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -14,8 +14,8 @@ go_library(
         ":configs",
         ":credentials",
         "//astore/common:go_default_library",
-        "//astore/rpc:astore-go",
-        "//astore/rpc:auth-go",
+        "//astore/proto:astore-go",
+        "//astore/proto:auth-go",
         "//astore/server/astore:go_default_library",
         "//astore/server/auth:go_default_library",
         "//astore/server/templates",
