--- a/astore/server/astore/BUILD.bazel
+++ b/astore/server/astore/BUILD.bazel
@@ -14,7 +14,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/astore/server/astore",
     visibility = ["//visibility:public"],
     deps = [
-        "//astore/rpc:astore-go",
+        "//astore/proto:astore-go",
         "//lib/kflags:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/oauth:go_default_library",
@@ -41,7 +41,7 @@ go_test(
     local = True,
     deps = [
         "//astore/client/astore:go_default_library",
-        "//astore/rpc:astore-go",
+        "//astore/proto:astore-go",
         "//lib/errdiff:go_default_library",
         "//lib/testutil:go_default_library",
         "@com_github_prashantv_gostub//:go_default_library",
