astore: Move protos into package dirs
This is part of a larger effort to make the repository `go get`-clean.
This change moves protos around such that their import paths match their
actual package paths in the repository. Their BUILD files are cleaned up
such that `bazel run //:gazelle` creates no diffs, and gazelle doesn't
complain about ambiguous imports.

Tested:
* `bazel run //:gazelle` creates no diffs
* `bazel test //...` still works
* `go get -u ./...` no longer complains about astore/rpc/* packages

--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -14,8 +14,8 @@ go_library(
         ":configs",
         ":credentials",
         "//astore/common:go_default_library",
-        "//astore/rpc:astore-go",
-        "//astore/rpc:auth-go",
+        "//astore/rpc/astore:go_default_library",
+        "//astore/rpc/auth:go_default_library",
         "//astore/server/astore:go_default_library",
         "//astore/server/auth:go_default_library",
         "//astore/server/templates",
