--- a/astore/client/astore/BUILD.bazel
+++ b/astore/client/astore/BUILD.bazel
@@ -14,7 +14,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/astore/client/astore",
     visibility = ["//visibility:public"],
     deps = [
-        "//astore/rpc:astore-go",
+        "//astore/rpc/astore:go_default_library",
         "//lib/client:go_default_library",
         "//lib/client/ccontext:go_default_library",
         "//lib/grpcwebclient:go_default_library",
