--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -10,14 +10,14 @@ go_library(
     importpath = "github.com/enfabrica/enkit/astore/server",
     visibility = ["//visibility:private"],
     deps = [
-        ":assets",
-        ":configs",
-        ":credentials",
         "//astore/common:go_default_library",
         "//astore/rpc/astore:go_default_library",
         "//astore/rpc/auth:go_default_library",
+        "//astore/server/assets:go_default_library",
         "//astore/server/astore:go_default_library",
         "//astore/server/auth:go_default_library",
+        "//astore/server/configs:go_default_library",
+        "//astore/server/credentials:go_default_library",
         "//astore/server/templates",
         "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
