--- a/astore/server/templates/BUILD.bazel
+++ b/astore/server/templates/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("//bazel/qtc:defs.bzl", "qtpl_go_library")
 
 qtpl_go_library(
@@ -13,4 +14,12 @@ qtpl_go_library(
         "//astore/rpc/astore:go_default_library",
         "@com_github_dustin_go_humanize//:go_default_library",
     ],
+)
+
+go_library(
+    name = "go_default_library",
+    srcs = ["empty.go"],
+    embed = [":templates"],  # keep
+    importpath = "github.com/enfabrica/enkit/astore/server/templates",
+    visibility = ["//visibility:public"],
 )
