--- a/enkit/proto/BUILD.bazel
+++ b/enkit/proto/BUILD.bazel
@@ -17,6 +17,7 @@ go_proto_library(
 
 go_library(
     name = "go_default_library",
+    srcs = ["empty.go"],
     embed = [":enkit_proto_go_proto"],
     importpath = "github.com/enfabrica/enkit/enkit/proto",
     visibility = ["//visibility:public"],
