--- a/machinist/machine/BUILD.bazel
+++ b/machinist/machine/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_embed_data", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -11,7 +11,6 @@ go_library(
     importpath = "github.com/enfabrica/enkit/machinist/machine",
     visibility = ["//visibility:public"],
     deps = [
-        ":machinist_assets",
         "//astore/rpc/auth:go_default_library",
         "//lib/client:go_default_library",
         "//lib/goroutine:go_default_library",
@@ -20,6 +19,7 @@ go_library(
         "//lib/multierror:go_default_library",
         "//lib/retry:go_default_library",
         "//machinist/config:go_default_library",
+        "//machinist/machine/assets:go_default_library",
         "//machinist/polling:go_default_library",
         "//machinist/rpc:machinist-go",
         "@com_github_spf13_cobra//:go_default_library",
@@ -28,87 +28,12 @@ go_library(
     ],
 )
 
-go_library(
-    name = "machinist_assets",
-    srcs = [
-        "autouser_binary",
-        "libpam_script_install",
-        "mnode_sshd_conf",
-        "mnode_systemd_conf",
-        "nss_autouser_config",
-        "pam_script",
-        "pam_sshd_config",
-    ],
-    importpath = "github.com/enfabrica/enkit/machinist/machinist_assets",
-)
-
-go_embed_data(
-    name = "mnode_systemd_conf",
-    src = "//machinist/machine/assets:machinist.service.gotmpl",
-    package = "machinist_assets",
-    string = True,
-    var = "SystemdTemplate",
-    visibility = ["//visibility:public"],
-)
-
-go_embed_data(
-    name = "mnode_sshd_conf",
-    src = "//machinist/machine/assets:machinist_sshd.conf.gotmpl",
-    package = "machinist_assets",
-    string = True,
-    var = "SSHDTemplate",
-    visibility = ["//visibility:public"],
-)
-
-go_embed_data(
-    name = "nss_autouser_config",
-    src = "//machinist/machine/assets:nss-autouser.conf.gotmpl",
-    package = "machinist_assets",
-    string = True,
-    var = "NssConfig",
-    visibility = ["//visibility:public"],
-)
-
-go_embed_data(
-    name = "autouser_binary",
-    srcs = [
-        "//proxy/nss:nss_autouser",
-    ],  # Technically cc_library outputs a .a and .so, doesn't matter which but this embeds both TODO(adam): strip out .a just for sizing reasons
-    package = "machinist_assets",
-    var = "AutoUserBinaries",
-    visibility = ["//visibility:public"],
-)
-
-go_embed_data(
-    name = "pam_script",
-    src = "//proxy/nss/configs:pam_script_acct",
-    package = "machinist_assets",
-    var = "PamScript",
-    visibility = ["//visibility:public"],
-)
-
-go_embed_data(
-    name = "libpam_script_install",
-    src = "//machinist/machine/assets:install_libpam-script.sh",
-    package = "machinist_assets",
-    var = "InstallLibPamScript",
-    visibility = ["//visibility:public"],
-)
-
-go_embed_data(
-    name = "pam_sshd_config",
-    src = "//proxy/nss/configs:sshd",
-    package = "machinist_assets",
-    var = "PamSSHDConfig",
-    visibility = ["//visibility:public"],
-)
-
 go_test(
     name = "go_default_test",
     srcs = ["templates_test.go"],
     deps = [
         ":go_default_library",
-        ":machinist_assets",
+        "//machinist/machine/assets:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
     ],
 )
