--- a/proxy/BUILD.bazel
+++ b/proxy/BUILD.bazel
@@ -1,4 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_docker//go:image.bzl", "go_image")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
 
 go_library(
     name = "go_default_library",
@@ -6,10 +8,10 @@ go_library(
     importpath = "github.com/enfabrica/enkit/proxy",
     visibility = ["//visibility:private"],
     deps = [
-        ":credentials",
         "//lib/client:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
         "//lib/srand:go_default_library",
+        "//proxy/credentials:go_default_library",
         "//proxy/enproxy:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
@@ -20,27 +22,6 @@ go_binary(
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
 )
-
-load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")
-
-# Generate a .go file containing all the credentials supplied during the build.
-go_embed_data(
-    name = "embedded-credentials",
-    srcs = glob(["credentials/**/*.flag*"]),
-    flatten = True,
-    package = "credentials",
-    visibility = ["//visibility:public"],
-)
-
-go_library(
-    name = "credentials",
-    srcs = [":embedded-credentials"],
-    importpath = "github.com/enfabrica/enkit/proxy/credentials",
-    visibility = ["//visibility:public"],
-)
-
-load("@io_bazel_rules_docker//go:image.bzl", "go_image")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
 
 container_image(
     name = "enproxy-base",
