--- a/test/example/rpc/BUILD.bazel
+++ b/test/example/rpc/BUILD.bazel
@@ -19,6 +19,7 @@ go_proto_library(
 
 go_library(
     name = "go_default_library",
+    srcs = ["empty.go"],
     embed = [":echo_go_proto"],
     importpath = "github.com/enfabrica/enkit/test/example/rpc",
     visibility = ["//visibility:public"],
