--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -1,5 +1,4 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")
 load("//bazel/appengine:defs.bzl", "go_appengine_deploy")
 
 # gazelle:resolve go github.com/enfabrica/enkit/astore/server/templates //astore/server/templates
@@ -10,14 +9,14 @@ go_library(
     importpath = "github.com/enfabrica/enkit/astore/server",
     visibility = ["//visibility:private"],
     deps = [
-        ":assets",
-        ":configs",
-        ":credentials",
         "//astore/common:go_default_library",
         "//astore/rpc/astore:go_default_library",
         "//astore/rpc/auth:go_default_library",
+        "//astore/server/assets:go_default_library",
         "//astore/server/astore:go_default_library",
         "//astore/server/auth:go_default_library",
+        "//astore/server/configs:go_default_library",
+        "//astore/server/credentials:go_default_library",
         "//astore/server/templates",
         "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
@@ -39,68 +38,6 @@ go_library(
 go_binary(
     name = "server",
     embed = [":go_default_library"],
-    visibility = ["//visibility:public"],
-)
-
-# Generate a .go file containing all the credentials supplied during the build.
-go_embed_data(
-    name = "embedded-credentials",
-    srcs = glob(["credentials/**/*.flag*"]),
-    flatten = True,
-    package = "credentials",
-    visibility = ["//visibility:public"],
-)
-
-go_library(
-    name = "credentials",
-    srcs = [":embedded-credentials"],
-    importpath = "github.com/enfabrica/enkit/astore/server/credentials",
-    visibility = ["//visibility:public"],
-)
-
-# Generate a .go file containing all the configs supplied during the build.
-go_embed_data(
-    name = "embedded-configs",
-    srcs = glob(["configs/**/*.config*"]),
-    flatten = True,
-    package = "configs",
-    visibility = ["//visibility:public"],
-)
-
-go_library(
-    name = "configs",
-    srcs = [":embedded-configs"],
-    importpath = "github.com/enfabrica/enkit/astore/server/configs",
-    visibility = ["//visibility:public"],
-)
-
-filegroup(
-    name = "css",
-    srcs = [
-        "@npm//:node_modules/material-design-icons/iconfont/MaterialIcons-Regular.ttf",
-        "@npm//:node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff",
-        "@npm//:node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff2",
-        "@npm//:node_modules/material-design-icons/iconfont/material-icons.css",
-        "@npm//:node_modules/material-design-lite/material.min.css",
-        "@npm//:node_modules/material-design-lite/material.min.css.map",
-        "@npm//:node_modules/material-design-lite/material.min.js",
-        "@npm//:node_modules/material-design-lite/material.min.js.map",
-    ],
-)
-
-# Generate a .go file containing all the web assets.
-go_embed_data(
-    name = "embedded-assets",
-    srcs = [":css"] + glob(["assets/**"]),
-    flatten = True,
-    package = "assets",
-    visibility = ["//visibility:public"],
-)
-
-go_library(
-    name = "assets",
-    srcs = [":embedded-assets"],
-    importpath = "github.com/enfabrica/enkit/astore/server/assets",
     visibility = ["//visibility:public"],
 )
 
