bazel/remote: add support for copying input files.
Before this PR:
- the rule could only copy the files generated by a target
  and its run time dependencies.

After this PR:
- the rule can copy the files needed in order to build
  the target specified.

This is implemented by using aspects, and introducing a new inputs
parameter. Additionally, added ability to copy all deps, runtime
and non-runtime.

--- a/bazel/utils/BUILD.bazel
+++ b/bazel/utils/BUILD.bazel
@@ -139,6 +139,7 @@ exec_test(
     must_fail = True,
 )
 
+#### Actual tests
 sh_binary(
     name = "save-argv",
     srcs = ["testdata/remote/save-argv.sh"],
@@ -276,4 +277,40 @@ remote_run_test(
         "/tmp/testdir/",
     ],
     target = ":quote01",
+)
+
+remote_run_test(
+    name = "with-inputs",
+    dests = [
+        "/tmp/testdir/",
+    ],
+    inputs = ":hello-world",
+)
+
+remote_run_test(
+    name = "with-noop-inputs",
+    dests = [
+        "non-existant-machine-1.corp",
+    ],
+    target = ":hello-world",
+    # Should be equivalent to no inputs specified.
+    inputs = "@enkit//bazel/utils/remote:noop",
+)
+
+remote_run_test(
+    name = "with-all-inputs",
+    dests = [
+        "non-existant-machine-1.corp",
+    ],
+    alldeps = True,
+    inputs = ":hello-world",
+)
+
+remote_run_test(
+    name = "with-all-basic",
+    dests = [
+        "non-existant-machine-1.corp",
+    ],
+    alldeps = True,
+    target = ":wrapper",
 )
