--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 *.sh @jonathan-enf @ccontavalli @ahungrynacho @minor-fixes @aaahrens
-/scripts @jonathan-enf @ccontavalli @minor-fixes
+/scripts @jonathan-enf @ccontavalli @minor-fixes @george-enf
 
