--- a/machinist/mserver/BUILD.bazel
+++ b/machinist/mserver/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//lib/client:go_default_library",
         "//lib/knetwork/kdns:go_default_library",
         "//lib/logger:go_default_library",
+        "//lib/server:go_default_library",
         "//machinist/config:go_default_library",
         "//machinist/rpc:machinist-go",
         "//machinist/state:go_default_library",
