--- a/proxy/ptunnel/commands/BUILD.bazel
+++ b/proxy/ptunnel/commands/BUILD.bazel
@@ -15,7 +15,6 @@ go_library(
         "//lib/kcerts:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
-        "//lib/khttp:go_default_library",
         "//lib/khttp/krequest:go_default_library",
         "//lib/khttp/protocol:go_default_library",
         "//lib/knetwork:go_default_library",
@@ -31,6 +30,7 @@ go_test(
     srcs = [
         "agent_test.go",
         "ssh_test.go",
+        "tunnel_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
