--- a/enkit/version/BUILD.bazel
+++ b/enkit/version/BUILD.bazel
@@ -2,7 +2,10 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["version.go"],
+    srcs = [
+        "version.go",
+        "features.go",
+    ],
     importpath = "github.com/enfabrica/enkit/enkit/version",
     visibility = ["//visibility:public"],
     deps = [
