enkit version: Add build time info
This change adds a "Built at" line to `enkit version`, which displays
when the binary was built.

Tested:
* `bazel run //enkit -- version` - shows that it was built at the "zero"
  time
* `bazel run --stamp //enkit -- version` - shows that it was built now

--- a/lib/stamp/BUILD.bazel
+++ b/lib/stamp/BUILD.bazel
@@ -11,5 +11,6 @@ go_library(
         "GitSha": "{STABLE_GIT_SHA}",
         "GitMasterSha": "{STABLE_GIT_MASTER_SHA}",
         "changedFiles": "{STABLE_GIT_CHANGES}",
+        "buildTimestamp": "{BUILD_TIMESTAMP}",
     },
 )
