--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//lib/cache:go_default_library",
         "//lib/config/marshal:go_default_library",
         "//lib/kcerts/ked25519:go_default_library",
+        "//lib/srand:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/config/directory:go_default_library",
         "@com_github_mitchellh_go_homedir//:go_default_library",
