enkit agent: use one path for all ssh-agent sockets (#725)
enkit agent: use one path for all ssh-agent sockets

Goal: When a user reconnects to a remote machine using ssh, we want
existing persistent terminals (ie. tmux, screen) to be able to access
the new socket.

To accomplish this, we always create (or update) a symlink to the current
ssh-agent socket, so that existing processes can always access the
latest and greatest instance of the agent.

* When starting a new ssh-agent, always use ~/.config/enkit/agent as the
  socket name.

* When discovering a running ssh-agent in the environment, create or
  update ~/.config/enkit/agent to be a symlink to the new socket.

Tested: Modified the regression test to use a mock version of
directory.GetConfigDir, tests pass.

manual testing:

```
$ SSH_AUTH_SOCK=/tmp/ssh-dalwl4pZhDch/agent.1029205; export SSH_AUTH_SOCK;

$ ssh-add -l
The agent has no identities.

$ ssh-add ~/.ssh/id_ed25519
id_ed25519      id_ed25519.pub

$ ssh-add ~/.ssh/id_ed25519
Identity added: /home/jonathan/.ssh/id_ed25519 (/home/jonathan/.ssh/id_ed25519)

$ ssh-add -l
256 SHA256:AbeM0ij/qiAgtXMVB+Eq6u4twnTqLWFawi9n+u1N2wQ /home/jonathan/.ssh/id_ed25519 (ED25519)

$ /home/jonathan/gee/enkit/enkit_agent2/bazel-bin/enkit/enkit_/enkit agent print
SSH_AUTH_SOCK=/home/jonathan/.config/enkit/agent; export SSH_AUTH_SOCK;

$ ls -l ~/.config/enkit/agent
lrwxrwxrwx 1 jonathan jonathan 35 Aug 31 19:11 /home/jonathan/.config/enkit/agent -> /tmp/ssh-dalwl4pZhDch/agent.1029205=

$ SSH_AUTH_SOCK=/home/jonathan/.config/enkit/agent ssh-add -l
256 SHA256:AbeM0ij/qiAgtXMVB+Eq6u4twnTqLWFawi9n+u1N2wQ /home/jonathan/.ssh/id_ed25519 (ED25519)

```

Further testing: installed new enkit in my container on build-06, and tried disconnecting
and reconnecting my ssh session, and observed the symlink get updated appropriately so that
my tmux session continued to be able to access my credentials.  Huzzah!

--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -16,7 +16,9 @@ go_library(
         "//lib/cache:go_default_library",
         "//lib/config/marshal:go_default_library",
         "//lib/kcerts/ked25519:go_default_library",
+        "//lib/srand:go_default_library",
         "//lib/logger:go_default_library",
+        "//lib/config/directory:go_default_library",
         "@com_github_mitchellh_go_homedir//:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
         "@org_golang_x_crypto//ssh/agent:go_default_library",
@@ -34,6 +36,7 @@ go_test(
         ":go_default_library",
         "//lib/cache:go_default_library",
         "//lib/logger/klog:go_default_library",
+        "//lib/config/directory:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
     ],
