enkit: Enable cgo resolver for deployed linux binary
This change ensures that cgo is enabled and used in the Linux binary, so
that it can resolve addresses in the Cadence VCAD chamber machines,
where NIS is used (via nsswitch.conf/glibc).

It would seem that as soon as either goos/goarch and/or static is set on
the binary, rules_go uses a bazel "transition" that loses any `cgo`
attribute set on the binary. This is visible when building with
`--subcommands`, as the `CGO_ENABLED` env var is not set, and the
resulting binary cannot use the cgo DNS resolver.

Setting `pure=off` and not setting `static` seems to be the most
reliable way to get a working cgo binary.

Tested:
* Built with `bazel build //enkit:deploy`, which builds the versions
  that will actually be pushed to astore
* Ran `GODEBUG=netdns=cgo+2
  bazel-bin/enkit/deploy.sh.runfiles/enkit/enkit/enkit-linux-amd64_/enkit-linux-amd64
  ssh scott@build-04.sea` - saw that cgo resolver is actually used

--- a/enkit/BUILD.bazel
+++ b/enkit/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("//bazel/astore:defs.bzl", "astore_upload")
 
 go_library(
     name = "go_default_library",
@@ -19,8 +20,10 @@ go_binary(
     embed = [":go_default_library"],
     goarch = "amd64",
     goos = "linux",
-    static = "on",
-    cgo = True,
+    # Force cgo DNS resolver to be used, which is required in certain
+    # environments (those using NIS to resolve addresses, for one). Also disable
+    # `static`, since this causes segfaults when forcing cgo to be enabled.
+    pure = "off",
     visibility = ["//visibility:public"],
 )
 
@@ -41,8 +44,6 @@ go_binary(
     static = "on",
     visibility = ["//visibility:public"],
 )
-
-load("//bazel/astore:defs.bzl", "astore_upload")
 
 astore_upload(
     name = "deploy",
