go: Support building for both 1.16 and 1.19
We would like to build Go for the newest SDK, but need to maintain
our ability to build certain binaries for go1.16, the last
Appengine-supported Go version. The main risk is updating dependencies
to the point where binaries that need to be deployed to Appengine no
longer work.

This change attempts to solve this problem by loading two Golang SDKs
via WORKSPACE, and allowing them to be selectable via recently-added
features to rules_go:
* `bazel build --@io_bazel_rules_go//go/toolchain:sdk_version=<version>`
  will affect the SDK version used for all targets in the build
* `go_cross_binary` rule allows for the creation of a `go_binary` that
  is pinned to a specific Go SDK version (regardless of the above flag).

By creating `go_cross_binary` targets for Appengine binary targets
pinned to 1.16, we can assert that these binaries continue to build -
updating dependencies too much will allow the go_binary target to
continue to build, but will break the `go_cross_binary` target that is
pinned to 1.16.

In order to make this happen, the following was done:
* Update rules_go to a master version that includes rules_go pull 3261
  (not yet part of a release)
* Add multiple `go_download_sdk` stanzas - one per supported Golang
  version. Order appears to matter, so the latest one is listed first,
  so it becomes the default. go1.16 is only loaded to validate that
  certain parts of the codebase build with the old SDK, but otherwise
  shouldn't be the default.
* Tweak gazelle initialization to specify which SDK version to use (we
  default to the latest one - see above reasoning)
* rules_docker breaks with the above, since re-does gazelle and Go
  toolchain initialization unconditionally. This change adds a patch to
  comment this out - as we will always do the initialization in the
  proper order ourselves.
* Updating rules_go breaks the Cloud Storage library, as it updates
  `go_googleapis` (GCP API protos) to too new of a version 

--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")
 load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")
 load("//bazel/appengine:defs.bzl", "go_appengine_deploy")
 
@@ -40,6 +40,15 @@ go_binary(
     name = "server",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+# This target exists to ensure that the server binary builds with the version of
+# the Go SDK that supports AppEngine, which guards against e.g. third-party
+# dependencies that have newer Go SDK requirements.
+go_cross_binary(
+    name = "server_appengine",
+    sdk_version = "1.16",
+    target = ":server",
 )
 
 # Generate a .go file containing all the credentials supplied during the build.
