lib/bazel: add ability to pass extra arbitrary flags to bazel.
Before this commit: there was no way to pass arbitrary flags to
bazel.

After this commit: a command line option was added to allow
arbitrary flags to be passed to bazel.

--- a/lib/bazel/commands/BUILD.bazel
+++ b/lib/bazel/commands/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//enkit/proto:go_default_library",
         "//lib/bazel:go_default_library",
         "//lib/client:go_default_library",
+        "//lib/logger:go_default_library",
         "//lib/git:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@org_golang_google_protobuf//encoding/prototext:go_default_library",
