--- a/faketree/BUILD.bazel
+++ b/faketree/BUILD.bazel
@@ -1,3 +1,4 @@
+load("//bazel/astore:defs.bzl", "astore_upload")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 
 go_library(
@@ -33,4 +34,13 @@ sh_test(
         # Cloud Build cannot run privileged containers
         "no-cloudbuild",
     ],
+)
+
+astore_upload(
+    name = "astore_push",
+    file = "infra/tools/faketree",
+    targets = [
+        ":faketree",
+    ],
+    visibility = ["//:__pkg__"]
 )
