--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -1,3 +1,4 @@
+load("//bazel/astore:defs.bzl", "astore_upload")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
@@ -22,3 +23,13 @@ go_binary(
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
 )
+
+astore_upload(
+    name = "astore_push",
+    file = "infra/flextape/flextape_server",
+    targets = [
+        ":flextape",
+    ],
+    visibility = ["//:__pkg__"]
+)
+
