--- a/manager/client/BUILD.bazel
+++ b/manager/client/BUILD.bazel
@@ -1,3 +1,4 @@
+load("//bazel/astore:defs.bzl", "astore_upload")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
@@ -20,4 +21,13 @@ go_binary(
     name = "client",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+astore_upload(
+    name = "astore_push",
+    file = "infra/flextape/flextape_client",
+    targets = [
+        ":client",
+    ],
+    visibility = ["//:__pkg__"]
 )
