--- a/lib/github/BUILD.bazel
+++ b/lib/github/BUILD.bazel
@@ -9,8 +9,11 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/github",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/kflags:go_default_library",
+        "//lib/logger:go_default_library",
         "@com_github_google_go_github//github:go_default_library",
         "@com_github_josephburnett_jd//lib:go_default_library",
+        "@org_golang_x_oauth2//:go_default_library",
     ],
 )
 
@@ -18,5 +21,8 @@ go_test(
     name = "go_default_test",
     srcs = ["stablecomment_test.go"],
     embed = [":go_default_library"],
-    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
+    deps = [
+        "@com_github_josephburnett_jd//lib:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
+    ],
 )
