lib/github: added proper context handler, with timeout.
To make it happen:
- restructured how flags are passed to stablecomments/wrappers.go
- changed the signature of functions to not require a context anymore
- updated users as necessary

Also: renamed stablecomments to stablecomment, to make the name
consistent with the rest of the files in the library.

--- a/lib/github/BUILD.bazel
+++ b/lib/github/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "stablecomments.go",
+        "stablecomment.go",
         "wrappers.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/github",
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//lib/kflags:go_default_library",
         "//lib/logger:go_default_library",
+        "//lib/retry:go_default_library",
         "@com_github_google_go_github//github:go_default_library",
         "@com_github_josephburnett_jd//lib:go_default_library",
         "@org_golang_x_oauth2//:go_default_library",
