--- a/bazel/astore/BUILD.bazel
+++ b/bazel/astore/BUILD.bazel
@@ -20,18 +20,36 @@ astore_upload(
     uidfile = "BUILD.bazel",
 )
 
-UID_ASTORE_UPLOAD_FILE_SH = "k6xcd26ipqk6o6axnxwmxa8gf8bpjhnc"
+UID_ASTORE_UPLOAD_FILE_SH = "skh2ux3sdyijzxdny33g32sst7bw42od"
 SHA_ASTORE_UPLOAD_FILE_SH = "d47d169097d16b57a2f8899c6c0b553c61f6a52cffe8d6264432324db1d80421"
+V1_UID_ASTORE_UPLOAD_FILE_SH = "k6xcd26ipqk6o6axnxwmxa8gf8bpjhnc"
+V1_SHA_ASTORE_UPLOAD_FILE_SH = "d47d169097d16b57a2f8899c6c0b553c61f6a52cffe8d6264432324db1d80421"
 
+# downloads whatever the latest version is:
 astore_download(
   name = "test_astore_download_file",
   download_src = "tmp/astore_upload_file_testdata",
   uid = UID_ASTORE_UPLOAD_FILE_SH,
+  tags = ["manual", "no-presubmit"],
 )
 
+# downloads the version specified by UID_ASTORE_UPLOAD_FILE_SH, which is automatically
+# updated by the astore_upload rule above.
 astore_download(
   name = "test_astore_download_file_with_digest",
   download_src = "tmp/astore_upload_file_testdata",
+  output = "with_digest.txt",  # must be specified to avoid output collision with previous rule.
   uid = UID_ASTORE_UPLOAD_FILE_SH,
   digest = SHA_ASTORE_UPLOAD_FILE_SH,
+  tags = ["manual", "no-presubmit"],
+)
+
+# downloads a "frozen" V1 version of the uploaded file.  This UID is manually updated only.
+astore_download(
+  name = "test_astore_download_file_v1",
+  download_src = "tmp/astore_upload_file_testdata",
+  output = "v1_with_digest.txt",  # must be specified to avoid output collision with previous rule.
+  uid = V1_UID_ASTORE_UPLOAD_FILE_SH,
+  digest = V1_SHA_ASTORE_UPLOAD_FILE_SH,
+  tags = ["manual", "no-presubmit"],
 )
