staco: add rules to deploy to astore.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -60,6 +60,7 @@ multirun(
     name = "binaries_release",
     commands = [
         "//enkit:deploy",
+        "//staco:deploy",
         "//faketree:astore_push",
         "//flextape/server:astore_push",
         # TODO(scott): Move the main to //flextape/client, delete this dir
