--- a/staco/BUILD.bazel
+++ b/staco/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("//bazel/astore:defs.bzl", "astore_upload")
 
 go_library(
     name = "go_default_library",
@@ -18,4 +19,13 @@ go_binary(
     name = "staco",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+astore_upload(
+    name = "deploy",
+    file = "tools/staco",
+    targets = [
+        ":staco",
+    ],
+    visibility = ["//:__pkg__"],
 )
