--- a/bazel/astore/BUILD.bazel
+++ b/bazel/astore/BUILD.bazel
@@ -1,64 +1,13 @@
-load("@//bazel/astore:defs.bzl", "astore_upload", "astore_download")
+load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+
+bzl_library(
+    name = "defs_bzl",
+    srcs = ["defs.bzl"],
+    visibility = ["//visibility:public"],
+)
 
 exports_files([
     "astore_upload_file.sh",
     "astore_upload_dir.sh",
 ])
 
-# This target can be used to validate the "uidfile" functionality
-# of the astore_upload rule.  Running this rule will cause the
-# UID_ASTORE_UPLOAD_FILE_SH variable, below, to be updated.
-astore_upload(
-    name = "test_astore_upload_file",
-    file = "tmp/astore_upload_file_testdata",
-    targets = [
-        ":astore_upload_file.sh",
-    ],
-    visibility = [
-        "//developer:__subpackages__",
-    ],
-    uidfile = "BUILD.bazel",
-)
-
-UID_ASTORE_UPLOAD_FILE_SH = "skh2ux3sdyijzxdny33g32sst7bw42od"
-SHA_ASTORE_UPLOAD_FILE_SH = "d47d169097d16b57a2f8899c6c0b553c61f6a52cffe8d6264432324db1d80421"
-V1_UID_ASTORE_UPLOAD_FILE_SH = "k6xcd26ipqk6o6axnxwmxa8gf8bpjhnc"
-V1_SHA_ASTORE_UPLOAD_FILE_SH = "d47d169097d16b57a2f8899c6c0b553c61f6a52cffe8d6264432324db1d80421"
-
-# downloads whatever the latest version is:
-astore_download(
-  name = "test_astore_download_file",
-  download_src = "tmp/astore_upload_file_testdata",
-  tags = ["manual", "no-presubmit"],
-)
-
-# downloads the version specified by UID_ASTORE_UPLOAD_FILE_SH
-astore_download(
-  name = "test_astore_download_file_by_uid",
-  download_src = "tmp/astore_upload_file_testdata",
-  output= "by_uid.txt",
-  uid = UID_ASTORE_UPLOAD_FILE_SH,
-  tags = ["manual", "no-presubmit"],
-)
-
-
-# downloads the version specified by UID_ASTORE_UPLOAD_FILE_SH
-# and verifies it using SHA_ASTORE_UPLOAD_FILE_SH
-astore_download(
-  name = "test_astore_download_file_with_digest",
-  download_src = "tmp/astore_upload_file_testdata",
-  output = "with_digest.txt",  # must be specified to avoid output collision with previous rule.
-  uid = UID_ASTORE_UPLOAD_FILE_SH,
-  digest = SHA_ASTORE_UPLOAD_FILE_SH,
-  tags = ["manual", "no-presubmit"],
-)
-
-# downloads a "frozen" V1 version of the uploaded file.  This UID is manually updated only.
-astore_download(
-  name = "test_astore_download_file_v1",
-  download_src = "tmp/astore_upload_file_testdata",
-  output = "v1_with_digest.txt",  # must be specified to avoid output collision with previous rule.
-  uid = V1_UID_ASTORE_UPLOAD_FILE_SH,
-  digest = V1_SHA_ASTORE_UPLOAD_FILE_SH,
-  tags = ["manual", "no-presubmit"],
-)
