--- a/bazel/astore/BUILD.bazel
+++ b/bazel/astore/BUILD.bazel
@@ -1,5 +1,23 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 
+py_binary(
+  name = "astore_upload",
+  srcs = ["astore_upload.py"],
+  deps = [
+    "@rules_python//python/runfiles"
+  ],
+  data = [
+    "@enkit//astore/client:astore",
+  ],
+  visibility = ["//visibility:public"],
+)
+
+py_test(
+  name = "astore_upload_test",
+  srcs = ["astore_upload_test.py"],
+  deps = [":astore_upload"],
+)
+
 bzl_library(
     name = "defs_bzl",
     srcs = ["defs.bzl"],
@@ -9,5 +27,7 @@ bzl_library(
 exports_files([
     "astore_upload_file.sh",
     "astore_upload_dir.sh",
-])
+    "astore_upload.py",
+],
+    visibility = ["//visibility:public"])
 
