--- a/proxy/ptunnel/BUILD.bazel
+++ b/proxy/ptunnel/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//lib/retry:go_default_library",
         "//proxy/nasshp:go_default_library",
         "@com_github_gorilla_websocket//:go_default_library",
+        "@com_github_jackpal_gateway//:go_default_library",
     ],
 )
 
