lib/oauth: make ogoogle provider configurable from CLI.

--- a/lib/oauth/ogoogle/BUILD.bazel
+++ b/lib/oauth/ogoogle/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//lib/oauth:go_default_library",
+        "//lib/kflags:go_default_library",
         "@com_github_coreos_go_oidc//:go_default_library",
         "@org_golang_google_api//cloudidentity/v1:go_default_library",
         "@org_golang_google_api//option:go_default_library",
