lib/oauth (and astore): create and propagate a logger.
In this PR:
- create and propagate a logger object to the oauth library,
  so events can be logged.
- introduce some initial logging in the Verify API (more to come).

--- a/lib/oauth/ogoogle/BUILD.bazel
+++ b/lib/oauth/ogoogle/BUILD.bazel
@@ -6,8 +6,9 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/oauth/ogoogle",
     visibility = ["//visibility:public"],
     deps = [
-        "//lib/oauth:go_default_library",
         "//lib/kflags:go_default_library",
+        "//lib/logger:go_default_library",
+        "//lib/oauth:go_default_library",
         "@com_github_coreos_go_oidc//:go_default_library",
         "@org_golang_google_api//cloudidentity/v1:go_default_library",
         "@org_golang_google_api//option:go_default_library",
