--- a/lib/oauth/BUILD.bazel
+++ b/lib/oauth/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//lib/khttp:go_default_library",
         "//lib/khttp/kassets:go_default_library",
         "//lib/khttp/kcookie:go_default_library",
+        "//lib/logger:go_default_library",
         "//lib/multierror:go_default_library",
         "//lib/oauth/cookie:go_default_library",
         "//lib/token:go_default_library",
