--- a/lib/oauth/ogithub/BUILD.bazel
+++ b/lib/oauth/ogithub/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/oauth/ogithub",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/logger:go_default_library",
         "//lib/oauth:go_default_library",
         "@com_github_google_go_github//github:go_default_library",
         "@org_golang_x_oauth2//:go_default_library",
