--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "react": "^18.2.0",
