--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "long": "^5.2.1",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
+    "nice-grpc-common": "^2.0.0",
+    "nice-grpc-web": "^2.0.1",
+    "protobufjs": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "ts-proto": "^1.133.0",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
