--- a/ghinviter/assets/BUILD.bazel
+++ b/ghinviter/assets/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_embed_data(
     name = "embedded-assets",
-    srcs = glob(["*"]),
+    srcs = glob(["*.html"]),
     flatten = True,
     package = "assets",
 )
