lib/khttp/ktls: add support for configuring TLS via flags.
In this PR:
- make TLS parameters configurable via a Flags object, like the
  rest of the codebase.

--- a/lib/khttp/ktls/BUILD.bazel
+++ b/lib/khttp/ktls/BUILD.bazel
@@ -5,4 +5,5 @@ go_library(
     srcs = ["tls.go"],
     importpath = "github.com/enfabrica/enkit/lib/khttp/ktls",
     visibility = ["//visibility:public"],
+    deps = ["//lib/kflags:go_default_library"],
 )
