lib/khttp/kclient: remove duplicated code, rely on ktransport now.
This PR updates kclient to use all the new goods added to ktransport.
A couple methods have been maintained for backward compatibility, but
re-implemented on top of the new abstractions.

--- a/lib/khttp/kclient/BUILD.bazel
+++ b/lib/khttp/kclient/BUILD.bazel
@@ -8,5 +8,6 @@ go_library(
     deps = [
         "//lib/kflags:go_default_library",
         "//lib/khttp/ktls:go_default_library",
+        "//lib/khttp/ktransport:go_default_library",
     ],
 )
